force-app/main/default/objects/Account/fields/Account_Health__c.field-meta.xml
<CustomField>
    <fullName>Account_Health__c</fullName>
    <label>Account Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>