force-app/main/default/objects/Account/fields/Account_Rating__c.field-meta.xml
<CustomField>
    <fullName>Account_Rating__c</fullName>
    <description>A/B/C credit and renewal priority rating set by Finance. Determines renewals queue order and credit review frequency.</description>
    <inlineHelpText>Credit and renewal priority rating assigned by Finance. A = highest priority / lowest risk. C = highest risk / lowest renewal priority. Used to sequence the renewals team&apos;s work queue.</inlineHelpText>
    <label>Account Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>