force-app/main/default/objects/Account/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <description>Account type classification. Platform (hyperscaler) vs Country (retail). Drives team routing, approval matrix, and field visibility.</description>
    <inlineHelpText>Account type. Platform = hyperscaler accounts managed by the Platform team. Country = retail/local accounts managed by country teams.</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>