force-app/main/default/objects/Account/fields/Active_Quote_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Quote_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of active (non-Void, non-Rejected) Quotes on this Account. Maintained by Quote_AfterSave_CreditRollup flow. Used by VR_QUOTE_06 to skip credit limit check on first quote.</description>
    <label>Active Quote Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>