force-app/main/default/objects/Account/fields/APAC_Group_Account__c.field-meta.xml
<CustomField>
    <fullName>APAC_Group_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APAC Group Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>APAC_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>