force-app/main/default/objects/Account/fields/CA_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>CA_Window_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Credit Application Window (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>