force-app/main/default/objects/Account/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner / End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Channel_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>