force-app/main/default/objects/Account/fields/Comp_Geography__c.field-meta.xml
<CustomField>
    <fullName>Comp_Geography__c</fullName>
    <description>Markets where this competitor operates. Used for competitive landscape analysis.</description>
    <inlineHelpText>Which markets does this competitor serve?</inlineHelpText>
    <label>Geography</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Greater China</fullName>
            </value>
            <value>
                <fullName>Southeast Asia</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Australia / NZ</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>