force-app/main/default/objects/Account/fields/Comp_How_To_Win__c.field-meta.xml
<CustomField>
    <fullName>Comp_How_To_Win__c</fullName>
    <description>Proven sales tactics and positioning to use when competing against this company.</description>
    <inlineHelpText>How do we beat them? What DE advantages should we lead with?</inlineHelpText>
    <label>How to Win</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>