force-app/main/default/objects/Account/fields/Comp_Products__c.field-meta.xml
<CustomField>
    <fullName>Comp_Products__c</fullName>
    <description>Product lines this competitor offers - used to identify overlap with DE offerings.</description>
    <inlineHelpText>Which DE product categories does this competitor compete in?</inlineHelpText>
    <label>Product Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>Cloud Connect</fullName>
            </value>
            <value>
                <fullName>Cross Connect</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Network / Connectivity</fullName>
            </value>
            <value>
                <fullName>Remote Hands</fullName>
            </value>
            <value>
                <fullName>Edge / Hyperscale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>