force-app/main/default/objects/Account/fields/Comp_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Comp_Strengths__c</fullName>
    <description>What this competitor does well - used in battle card and sales coaching.</description>
    <inlineHelpText>Key strengths of this competitor. What do they win on?</inlineHelpText>
    <label>Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>