force-app/main/default/objects/Account/fields/Comp_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Comp_Weaknesses__c</fullName>
    <description>Known weaknesses of this competitor - gaps, limitations, customer complaints.</description>
    <inlineHelpText>Where does this competitor fall short? What do customers complain about?</inlineHelpText>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>