force-app/main/default/objects/Account/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <externalId>true</externalId>
    <label>Company Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>