force-app/main/default/objects/Account/fields/Contracted_MRC_USD__c.field-meta.xml
<CustomField>
    <fullName>Contracted_MRC_USD__c</fullName>
    <label>Total Contracted MRC (USD)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>