force-app/main/default/objects/Account/fields/Contracting_Partner__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The direct contracting party for end-customer accounts. Mirrors the Odoo Related Company relationship where 33 of 1,406 accounts are linked to a contracting partner.</description>
    <inlineHelpText>The direct contracting party for end-customer accounts. Set when a reseller or channel partner holds the commercial contract on behalf of this end customer.</inlineHelpText>
    <label>Contracting Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>End Customer Accounts</relationshipLabel>
    <relationshipName>End_Customer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>