force-app/main/default/objects/Account/fields/Country_Manager__c.field-meta.xml
<CustomField>
    <fullName>Country_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Country Manager responsible for this account&apos;s subsidiary. Populated by admin when assigning DE_Subsidiary__c. Used as approver in Security_Deposit_Approval process. SDD §Security Deposit Exception Flow.</description>
    <inlineHelpText>Country Manager for the assigned DE Subsidiary. Required for Security Deposit approval routing.</inlineHelpText>
    <label>Country Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accounts (Country Manager)</relationshipLabel>
    <relationshipName>Country_Manager_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>