force-app/main/default/objects/Account/fields/Credit_Block__c.field-meta.xml
<CustomField>
    <fullName>Credit_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when credit limit breached or receivables &gt; 90 days overdue. Blocks Quote submission.</description>
    <label>Credit Block</label>
    <type>Checkbox</type>
</CustomField>