force-app/main/default/objects/Account/fields/Credit_Block_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Block_Reason__c</fullName>
    <label>Credit Block Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overdue_90_Days</fullName>
                <label>Overdue 90 Days</label>
            </value>
            <value>
                <fullName>MRC_Limit_Exceeded</fullName>
                <label>MRC Limit Exceeded</label>
            </value>
            <value>
                <fullName>NRC_Limit_Exceeded</fullName>
                <label>NRC Limit Exceeded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>