force-app/main/default/objects/Account/fields/Credit_Limit_MRC__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_MRC__c</fullName>
    <defaultValue>15000</defaultValue>
    <label>Credit Limit MRC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>