force-app/main/default/objects/Account/fields/Credit_Limit_NRC__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_NRC__c</fullName>
    <defaultValue>50000</defaultValue>
    <inlineHelpText>NRC credit limit</inlineHelpText>
    <label>Credit Limit NRC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>