force-app/main/default/objects/Account/fields/CSM_Owner__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSM_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>