force-app/main/default/objects/Account/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>Odoo res.partner ID. External ID — upsert key for IP-1. Immutable once set.</description>
    <externalId>true</externalId>
    <label>Odoo Customer ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>