force-app/main/default/objects/Account/fields/Customer_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Named account pricebook assigned by Rev Ops. When set, this pricebook is applied automatically to new quotes for this account instead of the standard pricebook.</inlineHelpText>
    <label>Customer Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Named Account Customers</relationshipLabel>
    <relationshipName>Customer_Pricebook_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>