force-app/main/default/objects/Account/fields/Customer_Type_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_Legacy__c</fullName>
    <description>Legacy values preserved for historical reporting</description>
    <inlineHelpText>Legacy values preserved for historical reporting</inlineHelpText>
    <label>Customer Type (Legacy)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyperscale</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Channel &amp; Network</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
                <isActive>false</isActive>
                <label>Internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>