force-app/main/default/objects/Account/fields/D_B_Number__c.field-meta.xml
<CustomField>
    <fullName>D_B_Number__c</fullName>
    <description>9-digit Dun &amp; Bradstreet DUNS number. Used for D&amp;B legal entity authentication check.</description>
    <label>D&amp;B DUNS Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>