force-app/main/default/objects/Account/fields/DE_Entity__c.field-meta.xml
<CustomField>
    <fullName>DE_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary DE subsidiary for this customer Account. Lookup to Account with RecordType = DE_Entity. Auto-populated from the first Quote that triggers Finance Approval.</description>
    <inlineHelpText>The primary DE subsidiary for this customer. Set automatically from the first Quote.</inlineHelpText>
    <label>Primary DE Subsidiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Accounts</relationshipLabel>
    <relationshipName>Customer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>