force-app/main/default/objects/Account/fields/DnB_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>DnB_Check_Date__c</fullName>
    <description>Date of last D&amp;B check. Finance-only visibility.</description>
    <inlineHelpText>Date of last D&amp;B check</inlineHelpText>
    <label>DnB Check Date</label>
    <type>Date</type>
</CustomField>