force-app/main/default/objects/Account/fields/DnB_Rating__c.field-meta.xml
<CustomField>
    <fullName>DnB_Rating__c</fullName>
    <description>D&amp;B credit risk rating. Finance-only visibility.</description>
    <label>DnB Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>