force-app/main/default/objects/Account/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE when the account is the end-consumer of services. Aligned with Odoo boolean column. An account can be both End Customer and have a Reseller relationship.</description>
    <inlineHelpText>Checked when this account is the end-user of DE services, even if invoicing goes through a reseller or channel partner. Aligned with Odoo End Customer flag.</inlineHelpText>
    <label>End Customer</label>
    <type>Checkbox</type>
</CustomField>