force-app/main/default/objects/Account/fields/Entity_Locked__c.field-meta.xml
<CustomField>
    <fullName>Entity_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE when Finance_Approval_Phase__c = Approved. Prevents editing of legal entity fields. VR-ACC-02 through VR-ACC-07 enforce.</description>
    <inlineHelpText>Checked automatically when Finance approval is granted. Prevents changes to legal entity fields (Tax ID, registered address, subsidiary) after approval.</inlineHelpText>
    <label>Billing Entity Locked</label>
    <type>Checkbox</type>
</CustomField>