force-app/main/default/objects/Account/fields/EUC__c.field-meta.xml
<CustomField>
    <fullName>EUC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>End User Customer. Required on Opportunity when AccountId points to a Reseller. Created on Account for reuse.</description>
    <inlineHelpText>End User Customer</inlineHelpText>
    <label>EUC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>