force-app/main/default/objects/Account/fields/Finance_Approval_Pending_Days__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Pending_Days__c</fullName>
    <description>Days in pending finance approval phase. Blank when not in a pending phase.</description>
    <formula>IF(
  AND(
    OR(
      ISPICKVAL(Finance_Approval_Phase__c, &apos;DnB_Pending&apos;),
      ISPICKVAL(Finance_Approval_Phase__c, &apos;KYC_Pending&apos;)
    ),
    NOT(ISBLANK(Finance_Approval_Phase_Changed__c))
  ),
  TODAY() - Finance_Approval_Phase_Changed__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Approval Pending Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>