force-app/main/default/objects/Account/fields/Finance_Approval_Phase__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Phase__c</fullName>
    <description>Single finance approval tracking field. Values: Not_Required / Not_Started / DnB_Pending / KYC_Pending / Approved / Rejected_DnB / Rejected_KYC. Set by F-05 and related flows.</description>
    <inlineHelpText>Current step in the Finance approval workflow. Set automatically by the Finance Approval flow. Read-only for Sales.</inlineHelpText>
    <label>Finance Approval Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not_Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Not_Started</fullName>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>DnB_Pending</fullName>
                <label>D&amp;B Pending</label>
            </value>
            <value>
                <fullName>KYC_Pending</fullName>
                <label>KYC Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected_DnB</fullName>
                <label>Rejected - D&amp;B</label>
            </value>
            <value>
                <fullName>Rejected_KYC</fullName>
                <label>Rejected - KYC</label>
            </value>
            <value>
                <fullName>Legal_Review_Pending</fullName>
                <label>Legal Review Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>