force-app/main/default/objects/Account/fields/Finance_Approval_Phase_Changed__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Phase_Changed__c</fullName>
    <description>Stamped by F-05 each time the phase changes. Used by Account_Scheduled_FinanceApprovalReminder to detect accounts stuck in pending state.</description>
    <inlineHelpText>Date when Finance_Approval_Phase__c was last updated. Stamped automatically by the Finance Approval flow each time the phase advances or is rejected. Used by the daily reminder flow to escalate accounts stuck in pending phases for 5+ days.</inlineHelpText>
    <label>Finance Approval Phase Changed</label>
    <type>Date</type>
</CustomField>