force-app/main/default/objects/Account/fields/Finance_Approval_Reminder_Count__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Reminder_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Incremented each time the Remind Finance Approval quick action is used. Tracks how many times Sales has nudged Finance.</description>
    <inlineHelpText>Tracks how many reminder notifications Sales has sent to Finance. Incremented each time the Remind Finance quick action is used. Read-only.</inlineHelpText>
    <label>Finance Approval Reminder Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>