force-app/main/default/objects/Account/fields/Finance_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approved_Date__c</fullName>
    <description>Date Finance_Approval_Phase__c was set to Approved. Auto-set by F-05. Immutable.</description>
    <inlineHelpText>Date Finance approval was granted. Auto-set by the Finance Approval flow. Do not edit manually.</inlineHelpText>
    <label>Finance Approved Date</label>
    <type>Date</type>
</CustomField>