force-app/main/default/objects/Account/fields/Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Finance user who approved. Set by automation.</description>
    <inlineHelpText>Finance user who approved.</inlineHelpText>
    <label>Finance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>