force-app/main/default/objects/Account/fields/Finance_Originating_Quote__c.field-meta.xml
<CustomField>
    <fullName>Finance_Originating_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Quote that triggered the current Finance Approval cycle. Set by Quote_AfterSave_SetAccountFinancePhase when Quote status changes to In Review. Used by Finance to identify the originating deal and its DE Entity for approval routing.</description>
    <label>Finance Originating Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Accounts (Finance Originating Quote)</relationshipLabel>
    <relationshipName>Accounts_Finance_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>