force-app/main/default/objects/Account/fields/Finance_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Finance_Rejection_Reason__c</fullName>
    <description>Captured by F-05 when Finance selects Reject at D&amp;B or KYC phase. Stored on Account for audit trail and Sales visibility.</description>
    <inlineHelpText>Reason recorded by Finance when rejecting the D&amp;B or KYC check. Set automatically by the Finance Approval flow. Sales teams can view but cannot edit.</inlineHelpText>
    <label>Finance Rejection Reason</label>
    <type>TextArea</type>
</CustomField>