force-app/main/default/objects/Account/fields/Fortune_500__c.field-meta.xml
<CustomField>
    <fullName>Fortune_500__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks Fortune 500 / subsidiary. Triggers waiver eligibility and Deal Review.</description>
    <inlineHelpText>Marks Fortune 500 / subsidiary</inlineHelpText>
    <label>Fortune 500</label>
    <type>Checkbox</type>
</CustomField>