force-app/main/default/objects/Account/fields/Global_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Name__c</fullName>
    <description>Always shows the top-level parent account name regardless of which level you are viewing. If this is the top-level account, shows its own name. If this is a child account, shows the parent name.</description>
    <formula>IF(ISBLANK(ParentId), Name, Parent.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the global parent account name for hierarchy reporting.</inlineHelpText>
    <label>Global Account Name</label>
    <type>Text</type>
</CustomField>