force-app/main/default/objects/Account/fields/Group_Finance_Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Group_Finance_Proposed_Solution__c</fullName>
    <description>Required when Group_Finance_Review_Required__c = TRUE. Group Finance documents proposed resolution.</description>
    <inlineHelpText>Required when Group Finance Review is triggered. Group Finance documents the proposed resolution or risk acceptance decision here.</inlineHelpText>
    <label>Group Finance Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>