force-app/main/default/objects/Account/fields/Is_Global_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Global_Parent__c</fullName>
    <description>TRUE when Account has no parent (top-level in hierarchy). Used in reports, list views, and dashboards for global account identification.</description>
    <formula>ISBLANK(ParentId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically TRUE for top-level accounts with no parent. Used for global account reporting.</inlineHelpText>
    <label>Is Global Parent</label>
    <type>Checkbox</type>
</CustomField>