force-app/main/default/objects/Account/fields/KYC_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>KYC_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KYC Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KYC_Approved_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>