force-app/main/default/objects/Account/fields/KYC_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Approved_Date__c</fullName>
    <label>KYC Approved Date</label>
    <type>Date</type>
</CustomField>