force-app/main/default/objects/Account/fields/KYC_Background_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Background_Verified_Date__c</fullName>
    <description>Timestamp when finance confirmed completion of the background verification (public records, media, Google search) during KYC review. Set automatically by the Finance Approval flow.</description>
    <inlineHelpText>Date and time when the background verification was confirmed by finance.</inlineHelpText>
    <label>KYC Background Verified</label>
    <type>DateTime</type>
</CustomField>