force-app/main/default/objects/Account/fields/KYC_Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Last_Review_Date__c</fullName>
    <label>KYC Last Review Date</label>
    <type>Date</type>
</CustomField>