force-app/main/default/objects/Account/fields/KYC_Sanctions_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Sanctions_Verified_Date__c</fullName>
    <description>Timestamp when finance confirmed completion of the sanctions screening (OFAC and other sanctions lists) during KYC review. Set automatically by the Finance Approval flow.</description>
    <inlineHelpText>Date and time when the sanctions screening was confirmed by finance.</inlineHelpText>
    <label>KYC Sanctions Verified</label>
    <type>DateTime</type>
</CustomField>