force-app/main/default/objects/Account/fields/KYC_TPI_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_TPI_Verified_Date__c</fullName>
    <description>Timestamp when finance confirmed completion of the Third Party Intelligence (TPI) check during KYC review. Set automatically by the Finance Approval flow.</description>
    <inlineHelpText>Date and time when the TPI/transparency check was confirmed by finance.</inlineHelpText>
    <label>KYC TPI Verified</label>
    <type>DateTime</type>
</CustomField>