force-app/main/default/objects/Account/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <description>Legal entity name in English. Used on contracts, Quote PDFs, and invoices. Locked after Finance Approval - use Request Master Data Change to amend.</description>
    <inlineHelpText>Full legal name in English as it appears on contracts, invoices, and official correspondence. Must match the signed Master Service Agreement exactly. Different from the trading name in the Account Name field.</inlineHelpText>
    <label>Legal Entity Name (English)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>