force-app/main/default/objects/Account/fields/Local_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Entity_Name__c</fullName>
    <description>Legal entity name in local language</description>
    <inlineHelpText>Legal entity name in local language</inlineHelpText>
    <label>Local Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>