force-app/main/default/objects/Account/fields/Local_Language__c.field-meta.xml
<CustomField>
    <fullName>Local_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the account operates in a local language requiring local entity name and address fields.</description>
    <label>Local Language</label>
    <type>Checkbox</type>
</CustomField>