force-app/main/default/objects/Account/fields/Local_Registered_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Local_Registered_Office_Address__c</fullName>
    <description>Registered office address in local language.</description>
    <label>Local Registered Office Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>