force-app/main/default/objects/Account/fields/Migration_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Source_Id__c</fullName>
    <description>BOSS account reference for migration traceability. Not used in integration.</description>
    <externalId>true</externalId>
    <inlineHelpText>Account reference ID from the legacy BOSS system. Used for migration traceability only. Do not edit.</inlineHelpText>
    <label>BOSS Account ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>