force-app/main/default/objects/Account/fields/Odoo_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Partner_ID__c</fullName>
    <inlineHelpText>Populated automatically by NEW-A (Account sync). Stores the Odoo res.partner record ID. Do not edit manually.</inlineHelpText>
    <label>Odoo Partner ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>