force-app/main/default/objects/Account/fields/Old_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Old_Sales_Team__c</fullName>
    <description>Determines team-level sharing and assignment.</description>
    <inlineHelpText>Sales team that owns this account. Determines team-level record sharing and assignment.</inlineHelpText>
    <label>Old Sales Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>